--- a/02-Grid/1-display/index.html
+++ b/02-Grid/1-display/index.html
@@ -13,7 +13,8 @@
 
     <h1>1-Grid</h1>
 
-    <div class="container">
+    <p>1 colonne display grid</p>
+    <div class="container2">
         <div class="item item-1 bdr-red">1</div>
         <div class="item item-2 bdr-red">2</div>
         <div class="item item-3 bdr-red">3</div>
@@ -21,7 +22,9 @@
 
     </br>
 
-    <div class="container2">
+    <p>3 colonne -- 1fr / 3fr / 1fr</p>
+    <p>Ici nous calculons en fraction on aurait très bien pu utilisé %, vh, ...</p>
+    <div class="container">
         <div class="item item-1 bdr-red">1</div>
         <div class="item item-2 bdr-red">2</div>
         <div class="item item-3 bdr-red">3</div>
