--- a/02-Grid/4-area/index.html
+++ b/02-Grid/4-area/index.html
@@ -12,54 +12,9 @@
 <body>
 
     <h1>4- Area</h1>
-
-    <div class="container bdr-red">
-
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-
-    </div>
-
-    </br>
-
-    <div class="container2 bdr-red">
-
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">5</div>
-        <div class="item bg-purple bdr-green">6</div>
-        <div class="item bg-cyan bdr-green">7</div>
-        <div class="item bg-yellow bdr-green">8</div>
-
-    </div>
-
-    </br>
-
-    <div class="container-repeat bdr-red">
-
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">5</div>
-        <div class="item bg-purple bdr-green">6</div>
-        <div class="item bg-cyan bdr-green">7</div>
-        <div class="item bg-yellow bdr-green">8</div>
-
-        <div class="item bg-blue bdr-green">9</div>
-        <div class="item bg-purple bdr-green">10</div>
-        <div class="item bg-cyan bdr-green">11</div>
-        <div class="item bg-yellow bdr-green">12</div>
-
-    </div>
-
-    </br>
-
+    
+    <p>4 Colonne -- repeat(4, 25%)</p>
+    <p>3 Row -- 60px 20vh 100px</p>
     <div class="cont-area">
         <div class="item-a bg-purple bdr-green">A</div>
         <div class="item-b bg-cyan bdr-green">A</div>
@@ -67,8 +22,7 @@
         <div class="item-d bg-blue bdr-green">A</div>
     </div>
 
-    </br>
-
+    <p>+ d'info en commentaire dans le CSS</p>
 
 </body>
 
