--- a/02-Grid/7-align-item/index.html
+++ b/02-Grid/7-align-item/index.html
@@ -11,93 +11,18 @@
 
 <body>
 
-    <h1>6- Justify-content</h1>
+    <h1>7 - Align-item</h1>
 
-    <div class="container bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-    </div>
-
-    </br>
-
-    <div class="container2 bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">5</div>
-        <div class="item bg-purple bdr-green">6</div>
-        <div class="item bg-cyan bdr-green">7</div>
-        <div class="item bg-yellow bdr-green">8</div>
-    </div>
-
-    </br>
-
-    <div class="container-repeat bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">4</div>
-        <div class="item bg-purple bdr-green">5</div>
-        <div class="item bg-cyan bdr-green">6</div>
-        <div class="item bg-yellow bdr-green">7</div>
-
-        <div class="item bg-blue bdr-green">8</div>
-        <div class="item bg-purple bdr-green">9</div>
-        <div class="item bg-cyan bdr-green">10</div>
-        <div class="item bg-yellow bdr-green">11</div>
-    </div>
-
-    </br>
-
-    <div class="cont-area">
-        <div class="item-a bg-purple bdr-green">1</div>
-        <div class="item-b bg-cyan bdr-green">2</div>
-        <div class="item-c bg-yellow bdr-green">3</div>
-        <div class="item-d bg-blue bdr-green">4</div>
-    </div>
-
-    </br>
-
-    <div class="cont-area-gap">
-        <div class="item-a bg-purple bdr-green">1</div>
-        <div class="item-b bg-cyan bdr-green">2</div>
-        <div class="item-c bg-yellow bdr-green">3</div>
-        <div class="item-d bg-blue bdr-green">4</div>
-    </div>
-
-    </br>
-
-    <div class="cont-area-gap">
-        <div class="item-a bg-purple bdr-green jus-ctnt-start">
-            <div>Jus-ctnt-Start</div>
-        </div>
-        <div class="item-b bg-cyan bdr-green jus-ctnt-end">
-            <div>Jus-ctnt-End</div>
-        </div>
-        <div class="item-c bg-yellow bdr-green jus-ctnt-center">
-            <div>Jus-ctnt-Center</div>
-        </div>
-        <div class="item-d bg-blue bdr-green jus-ctnt-stretch">
-            <div>Jus-ctnt-Stretch</div>
-        </div>
-    </div>
-
-    </br>
-
+    <p>Alignement dans l'item</p>
     <div class="cont-area-gap">
         <div class="item-a bg-purple bdr-green jus-ctnt-start al-itm-start">
-            <div>Jus-ctnt-?</div>
+            <div>Jus-ctnt-start</div>
         </div>
         <div class="item-b bg-cyan bdr-green jus-ctnt-end al-itm-end">
-            <div>Jus-ctnt-?</div>
+            <div>Jus-ctnt-end</div>
         </div>
         <div class="item-c bg-yellow bdr-green jus-ctnt-center al-itm-center">
-            <div>Jus-ctnt-?</div>
+            <div>Jus-ctnt-center</div>
         </div>
         <div class="item-d bg-blue bdr-green jus-ctnt-stretch al-itm-stretch">
             <div>Jus-ctnt-?</div>
