--- a/02-Grid/2-column/index.html
+++ b/02-Grid/2-column/index.html
@@ -13,6 +13,8 @@
 
     <h1>2-Grid</h1>
 
+    <p>3 colonne -- 1fr / 2fr / 1fr</p>
+    <p>Ici nous calculons en fraction on aurait très bien pu utilisé %, vh, ...</p>
     <div class="container bdr-purple">
         <div class="item bg-blue bdr-red">1</div>
         <div class="item bg-purple bdr-red">2</div>
@@ -21,6 +23,8 @@
 
 </br>
 
+    <p>4 colonne -- 20% 20% 50% 10%</p>
+    <p>Ici nous calculons en fraction on aurait très bien pu utilisé %, vh, ...</p>
     <div class="container2 bdr-purple">
         <div class="item bg-blue bdr-green">1</div>
         <div class="item bg-purple bdr-green">2</div>
