--- a/02-Grid/3-row/index.html
+++ b/02-Grid/3-row/index.html
@@ -13,18 +13,19 @@
 
     <h1>3-Row</h1>
 
+    <p>3 Colonne -- 2fr 8fr 2fr</p>
+    <p>1 row -- 10vh</p>
     <div class="container bdr-red">
-
         <div class="item bg-blue bdr-green">1</div>
         <div class="item bg-purple bdr-green">2</div>
         <div class="item bg-cyan bdr-green">3</div>
-
     </div>
 
     </br>
 
+    <p>4 Colonne -- 20% 10% 60% 10%</p>
+    <p>2 row -- 60px 20vh</p>
     <div class="container2 bdr-red">
-
         <div class="item bg-blue bdr-green">1</div>
         <div class="item bg-purple bdr-green">2</div>
         <div class="item bg-cyan bdr-green">3</div>
@@ -34,13 +35,13 @@
         <div class="item bg-purple bdr-green">6</div>
         <div class="item bg-cyan bdr-green">7</div>
         <div class="item bg-yellow bdr-green">8</div>
-
     </div>
 
     </br>
 
+    <p>4 Colonne -- repeat(4, 25%)</p>
+    <p>3 row -- 60px 20vh 30vh</p>
     <div class="container-repeat bdr-red">
-
         <div class="item bg-blue bdr-green">1</div>
         <div class="item bg-purple bdr-green">2</div>
         <div class="item bg-cyan bdr-green">3</div>
@@ -55,7 +56,6 @@
         <div class="item bg-purple bdr-green">10</div>
         <div class="item bg-cyan bdr-green">11</div>
         <div class="item bg-yellow bdr-green">12</div>
-
     </div>
 
 </body>
