--- a/02-Grid/5-gap/index.html
+++ b/02-Grid/5-gap/index.html
@@ -13,47 +13,9 @@
 
     <h1>5- Gap</h1>
 
-    <div class="container bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-    </div>
-
-    </br>
-
-    <div class="container2 bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">5</div>
-        <div class="item bg-purple bdr-green">6</div>
-        <div class="item bg-cyan bdr-green">7</div>
-        <div class="item bg-yellow bdr-green">8</div>
-    </div>
-
-    </br>
-
-    <div class="container-repeat bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">5</div>
-        <div class="item bg-purple bdr-green">6</div>
-        <div class="item bg-cyan bdr-green">7</div>
-        <div class="item bg-yellow bdr-green">8</div>
-
-        <div class="item bg-blue bdr-green">9</div>
-        <div class="item bg-purple bdr-green">10</div>
-        <div class="item bg-cyan bdr-green">11</div>
-        <div class="item bg-yellow bdr-green">12</div>
-    </div>
-
-    </br>
-
+    <p>Sans les gaps:</p>
+    <p>4 Colonne -- repeat(4, 25%)</p>
+    <p>3 Row -- 60px 20vh 100px</p>
     <div class="cont-area">
         <div class="item-a bg-purple bdr-green">1</div>
         <div class="item-b bg-cyan bdr-green">2</div>
@@ -63,6 +25,9 @@
 
     </br>
 
+    <p>Avec les gaps:</p>
+    <p>4 Colonne -- repeat(4, 25%)</p>
+    <p>3 Row -- 60px 20vh 100px</p>
     <div class="cont-area-gap">
         <div class="item-a bg-purple bdr-green">1</div>
         <div class="item-b bg-cyan bdr-green">2</div>
