--- a/02-Grid/6-justify-item/index.html
+++ b/02-Grid/6-justify-item/index.html
@@ -12,66 +12,9 @@
 <body>
 
     <h1>6- Justify-content</h1>
+    <p>!! Attention a bien checker les readme</p>
 
-    <div class="container bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-    </div>
-
-    </br>
-
-    <div class="container2 bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">5</div>
-        <div class="item bg-purple bdr-green">6</div>
-        <div class="item bg-cyan bdr-green">7</div>
-        <div class="item bg-yellow bdr-green">8</div>
-    </div>
-
-    </br>
-
-    <div class="container-repeat bdr-red">
-        <div class="item bg-blue bdr-green">1</div>
-        <div class="item bg-purple bdr-green">2</div>
-        <div class="item bg-cyan bdr-green">3</div>
-        <div class="item bg-yellow bdr-green">4</div>
-
-        <div class="item bg-blue bdr-green">4</div>
-        <div class="item bg-purple bdr-green">5</div>
-        <div class="item bg-cyan bdr-green">6</div>
-        <div class="item bg-yellow bdr-green">7</div>
-
-        <div class="item bg-blue bdr-green">8</div>
-        <div class="item bg-purple bdr-green">9</div>
-        <div class="item bg-cyan bdr-green">10</div>
-        <div class="item bg-yellow bdr-green">11</div>
-    </div>
-
-    </br>
-
-    <div class="cont-area">
-        <div class="item-a bg-purple bdr-green">1</div>
-        <div class="item-b bg-cyan bdr-green">2</div>
-        <div class="item-c bg-yellow bdr-green">3</div>
-        <div class="item-d bg-blue bdr-green">4</div>
-    </div>
-
-    </br>
-
-    <div class="cont-area-gap">
-        <div class="item-a bg-purple bdr-green">1</div>
-        <div class="item-b bg-cyan bdr-green">2</div>
-        <div class="item-c bg-yellow bdr-green">3</div>
-        <div class="item-d bg-blue bdr-green">4</div>
-    </div>
-
-    </br>
-
+    <p>alignement</p>
     <div class="cont-area-gap">
         <div class="item-a bg-purple bdr-green jus-ctnt-start">
             <div>Jus-ctnt-Start</div>
@@ -86,7 +29,6 @@
             <div>Jus-ctnt-Stretch</div>
         </div>
     </div>
-
 
 </body>
 
