--- a/03-Flex/10-exemple/index.html
+++ b/03-Flex/10-exemple/index.html
@@ -161,7 +161,7 @@
     </div>
     <div class="cont contact bg-pink">
         <h2>Contact</h2>
-        <div class="row">
+        <div class="row al-ctnt-space-around">
             <div class="txt-center form-contact bg-green">
                 <h4>Formulaire</h4>
                 <form action="" class="txt-center">
