--- a/03-Flex/2-flex-direction/index.html
+++ b/03-Flex/2-flex-direction/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>2-Flex-direction</h1>
 
+    <h3>Container row</h3>
     <!-- Div cont-row -->
     <div class="cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -31,6 +32,7 @@
 
     </br>
 
+    <h3>Container row-reverse</h3>
     <!-- Div cont-row-reverse -->
     <div class="cont-row-reverse bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -49,6 +51,7 @@
 
     </br>
 
+    <h3>Container column</h3>
     <!-- Div cont-column -->
     <div class="cont-column bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -67,6 +70,7 @@
 
     </br>
 
+    <h3>Container column-reverse</h3>
     <!-- Div cont-column-reverse -->
     <div class="cont-column-reverse bg-green">
         <div class="item-1 bg-purple bdr-yellow">
