--- a/03-Flex/7-align-content/index.html
+++ b/03-Flex/7-align-content/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-    <h1>6-align-item</h1>
+    <h1>7-align-content</h1>
 
+    <h3>align-content: start</h3>
     <!-- Div cont-row -->
     <div class="cont cont-al-ctnt-start cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -56,6 +57,7 @@
 
     </br>
 
+    <h3>align-content: end</h3>
     <!-- Div cont-wrap -->
     <div class="cont cont-al-ctnt-end cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -99,6 +101,7 @@
 
     </br>
 
+    <h3>align-content: center</h3>
     <!-- Div cont-wrap -->
     <div class="cont cont-al-ctnt-center cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -142,6 +145,7 @@
 
     </br>
 
+    <h3>align-content: space-between</h3>
     <!-- Div cont-wrap -->
     <div class="cont cont-al-ctnt-space-between cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -185,6 +189,7 @@
 
     </br>
 
+    <h3>align-content: space-around</h3>
     <!-- Div cont-wrap -->
     <div class="cont cont-al-ctnt-space-around cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
