--- a/03-Flex/1-display/index.html
+++ b/03-Flex/1-display/index.html
@@ -13,6 +13,9 @@
 <body>
     <h1>1- Display</h1>
 
+    <p>Ici nous voyons comment réagit un container flex</p>
+
+    <h3>Sans flex (par Défaut)</h3>
     <!-- Div Par Défault -->
     <div class="bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -31,6 +34,7 @@
 
     </br>
 
+    <h3>Container Flex</h3>
     <!-- Div cont-FLex -->
     <div class="cont-flex bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -49,8 +53,13 @@
 
     </br>
 
+    <p>Et à partir d'ici nous voyons comment interagit un container flex dans un container flex</p>
+    <p>Ps: c'est un peu le bordel mais c'est vraiment pour comprendre le principe nous y reviendront plus tard</p>
+
+    <h3>Sans flex (par Défaut)</h3>
     <!-- Div parDéfault | parDefault & cont-flex -->
     <div class="bg-green">
+        <h3>Sans flex</h3>
         <div class="item-1 bg-purple bdr-yellow">
             <div class="item-1 bg-purple bdr-yellow">
                 <h2>Item1</h2>
@@ -65,6 +74,7 @@
                 <h2>Item4</h2>
             </div>
         </div>
+        <h3>Avec Flex</h3>
         <div class="item-1 cont-flex bg-purple bdr-yellow">
             <div class="item-1 bg-purple bdr-yellow">
                 <h2>Item1</h2>
@@ -83,8 +93,10 @@
 
     </br>
 
+    <h3>Container Flex</h3>
     <!-- Div cont-flex | parDéfault & cont-flex -->
     <div class="cont-flex bg-green">
+        <h3>Sans flex</h3>
         <div class="item-1 bg-purple bdr-yellow">
             <div class="item-1 bg-purple bdr-yellow">
                 <h2>Item1</h2>
@@ -99,6 +111,7 @@
                 <h2>Item4</h2>
             </div>
         </div>
+        <h3>Avec flex</h3>
         <div class="item-1 cont-flex bg-purple bdr-yellow">
             <div class="item-1 bg-purple bdr-yellow">
                 <h2>Item1</h2>
