--- a/03-Flex/3-flex-wrap/index.html
+++ b/03-Flex/3-flex-wrap/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>3- Flex-wrap</h1>
 
+    <h3>Container no-wrap</h3>
     <!-- Div cont-row -->
     <div class="cont-nowrap cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -42,7 +43,7 @@
     </div>
 
     </br>
-
+    <h3>Container wrap</h3> 
     <!-- Div cont-wrap -->
     <div class="cont-wrap cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -58,22 +59,22 @@
             <h2>Item4</h2>
         </div>
         <div class="item-1 bg-purple bdr-yellow">
-            <h2>Item1</h2>
+            <h2>Item5</h2>
         </div>
         <div class="item-2 bg-purple bdr-yellow">
-            <h2>Item2</h2>
+            <h2>Item6</h2>
         </div>
         <div class="item-3 bg-purple bdr-yellow">
-            <h2>Item3</h2>
+            <h2>Item7</h2>
         </div>
         <div class="item-4 bg-purple bdr-yellow">
-            <h2>Item4</h2>
+            <h2>Item8</h2>
         </div>
     </div>
 
     </br>
-
-    <!-- Div cont-column -->
+    <h3>Container wrap-reverse</h3> 
+    <!-- Div cont-wrap-reverse -->
     <div class="cont-wrap-reverse bg-green">
         <div class="item-1 bg-purple bdr-yellow">
             <h2>Item1</h2>
@@ -88,16 +89,16 @@
             <h2>Item4</h2>
         </div>
         <div class="item-1 bg-purple bdr-yellow">
-            <h2>Item1</h2>
+            <h2>Item5</h2>
         </div>
         <div class="item-2 bg-purple bdr-yellow">
-            <h2>Item2</h2>
+            <h2>Item6</h2>
         </div>
         <div class="item-3 bg-purple bdr-yellow">
-            <h2>Item3</h2>
+            <h2>Item7</h2>
         </div>
         <div class="item-4 bg-purple bdr-yellow">
-            <h2>Item4</h2>
+            <h2>Item8</h2>
         </div>
     </div>
 
