--- a/03-Flex/4-flex-flow/index.html
+++ b/03-Flex/4-flex-flow/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>4- Flex-flow</h1>
 
+    <h3>Container flow 'row wrap'</h3>
     <!-- Div cont-row -->
     <div class="cont-flow1 cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -28,21 +29,22 @@
             <h2>Item4</h2>
         </div>
         <div class="item-1 bg-purple bdr-yellow">
-            <h2>Item1</h2>
+            <h2>Item5</h2>
         </div>
         <div class="item-2 bg-purple bdr-yellow">
-            <h2>Item2</h2>
+            <h2>Item6</h2>
         </div>
         <div class="item-3 bg-purple bdr-yellow">
-            <h2>Item3</h2>
+            <h2>Item7</h2>
         </div>
         <div class="item-4 bg-purple bdr-yellow">
-            <h2>Item4</h2>
+            <h2>Item8</h2>
         </div>
     </div>
 
     </br>
 
+    <h3>Container flow 'column-reverse wrap-reverse'</h3>
     <!-- Div cont-wrap -->
     <div class="cont-flow2 cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
@@ -58,16 +60,16 @@
             <h2>Item4</h2>
         </div>
         <div class="item-1 bg-purple bdr-yellow">
-            <h2>Item1</h2>
+            <h2>Item5</h2>
         </div>
         <div class="item-2 bg-purple bdr-yellow">
-            <h2>Item2</h2>
+            <h2>Item6</h2>
         </div>
         <div class="item-3 bg-purple bdr-yellow">
-            <h2>Item3</h2>
+            <h2>Item7</h2>
         </div>
         <div class="item-4 bg-purple bdr-yellow">
-            <h2>Item4</h2>
+            <h2>Item8</h2>
         </div>
     </div>
 
