--- a/03-Flex/5-justify-content/index.html
+++ b/03-Flex/5-justify-content/index.html
@@ -11,29 +11,11 @@
 </head>
 
 <body>
-    <h1>6-align-item</h1>
+    <h1>5-Justify-Content</h1>
 
+    <h3>Justify-Content: start</h3>
     <!-- Div cont-row -->
-    <div class="cont-al-start cont-row bg-green">
-        <div class="item-1 bg-purple bdr-yellow">
-            <h2>Item1</h2>
-        </div>
-        <div class="item-2 bg-purple bdr-yellow">
-            <h2>Item2</h2>
-        </div>
-        <div class="item-3 bg-purple bdr-yellow">
-            <h2>Item3</h2>
-        </div>
-        <div class="item-4 bg-purple bdr-yellow">
-            <h2>Item4</h2>
-        </div>
-
-    </div>
-
-    </br>
-
-    <!-- Div cont-wrap -->
-    <div class="cont-al-end cont-row bg-green">
+    <div class="cont-flx-start cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
             <h2>Item1</h2>
         </div>
@@ -50,8 +32,9 @@
 
     </br>
 
+    <h3>Justify-Content: end</h3>
     <!-- Div cont-wrap -->
-    <div class="cont-al-center cont-row bg-green">
+    <div class="cont-flx-end cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
             <h2>Item1</h2>
         </div>
@@ -68,8 +51,9 @@
 
     </br>
 
+    <h3>Justify-Content: center</h3>
     <!-- Div cont-wrap -->
-    <div class="cont-al-space-between cont-row bg-green">
+    <div class="cont-flx-center cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
             <h2>Item1</h2>
         </div>
@@ -86,8 +70,28 @@
 
     </br>
 
+    <h3>Justify-Content: space-between</h3>
     <!-- Div cont-wrap -->
-    <div class="cont-al-space-around cont-row bg-green">
+    <div class="cont-flx-space-between cont-row bg-green">
+        <div class="item-1 bg-purple bdr-yellow">
+            <h2>Item1</h2>
+        </div>
+        <div class="item-2 bg-purple bdr-yellow">
+            <h2>Item2</h2>
+        </div>
+        <div class="item-3 bg-purple bdr-yellow">
+            <h2>Item3</h2>
+        </div>
+        <div class="item-4 bg-purple bdr-yellow">
+            <h2>Item4</h2>
+        </div>
+    </div>
+
+    </br>
+
+    <h3>Justify-Content: space-around</h3>
+    <!-- Div cont-wrap -->
+    <div class="cont-flx-space-around cont-row bg-green">
         <div class="item-1 bg-purple bdr-yellow">
             <h2>Item1</h2>
         </div>
