--- a/03-Flex/8-order.grow.shrink.basis.flex.align-self/index.html
+++ b/03-Flex/8-order.grow.shrink.basis.flex.align-self/index.html
@@ -14,29 +14,29 @@
     <h1>8-Order/Grow/Shrink/Basis/Flex/Align-self</h1>
 
     <h3>clik chaque lien mène à la doc de MDN</h3>
-
+    
     <div class="bg-yellow">
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/order">Order</a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/order" target='_blank'>Order</a>
     </div>
     </br>   
     <div class="bg-yellow">
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex-grow">Grow</a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex-grow" target='_blank'>Grow</a>
     </div>
     </br>   
     <div class="bg-yellow">
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex-shrink">Shrink</a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex-shrink" target='_blank'>Shrink</a>
     </div>
     </br>   
     <div class="bg-yellow">
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex-basis">Basis</a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex-basis" target='_blank'>Basis</a>
     </div>
     </br>   
     <div class="bg-yellow">
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex">Flex</a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/flex" target='_blank'>Flex</a>
     </div>
     </br>   
     <div class="bg-yellow">
-        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/align-self">Align-Self</a>
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS/align-self" target='_blank'>Align-Self</a>
     </div>
 
 
