--- a/04-Sass/8-ramification/sass.html
+++ b/04-Sass/8-ramification/sass.html
@@ -54,13 +54,11 @@
     <div class="height-3">3</div>
 
     <div class="dog"></div>
-    <div style="background-image: url('images/cat.png')"></div>
-    <img src="./images/dog.png" alt="">
 
-    <img src="" alt="" class="image-bird">
-    <img src="" alt="" class="image-dog">
-    <img src="" alt="" class="image-dolphin">
-    <img src="" alt="" class="image-cat">
+    <div class="image-bird"></div>
+    <div class="image-dog"></div>
+    <div class="image-dolphin"></div>
+    <div class="image-cat"></div>
 
 </body>
 
