--- a/04-Sass/6-fonction/sass.html
+++ b/04-Sass/6-fonction/sass.html
@@ -27,7 +27,9 @@
     <a>Mon Super Lien</a>
     
     <a href="#">Mon Deuxieme super Lien</a>
-    
+
+    <p>!!! Sortez l'inspecteur pour mieux comprendre !!!</p>
+    <p>ctrl + shift + c</p>
     <div class="three-columns">
         <div>1</div>
     </div>
