--- a/05-JS-DOM/01-Base/index.html
+++ b/05-JS-DOM/01-Base/index.html
@@ -23,6 +23,11 @@
     link.textContent = 'Mozilla Developer Network';
     link.href = 'https://developer.mozilla.org';
     link.target = '_blank';
+
+    // Si l'on regarde dans notre inspecteur de notre navigateur dans l'onglet console
+    // L'on pourra voir les console.log
+    console.log('Hello World !')
+
   </script>
 
 </body>
