--- a/05-JS-DOM/03-Objet/index.html
+++ b/05-JS-DOM/03-Objet/index.html
@@ -19,8 +19,8 @@
   <script>
     
     /*
-     * On déclare notre variables 'personne'
-     *************************************/
+     * On déclare notre objet 'personne'
+     ************************************/
     var personne = {
       nom: ['Jean', 'Martin'],
       age: 32,
