--- a/05-JS-DOM/Calculatrice/index.html
+++ b/05-JS-DOM/Calculatrice/index.html
@@ -5,9 +5,14 @@
     </head>
 
     <body>
+
         <h3>Javascript Calculator</h3>
-        <div id="hint">(<a href="http://jsfiddle.net/igambin/MumBN/">show code</a>)</div>
+
+        <!-- Retrouver la source: -->
+        <div id="hint">(<a href="http://jsfiddle.net/igambin/MumBN/">Voir la source</a>)</div>
         <br/>
+
+        <!-- Création de notre tableau pour créé la calculatrice (Design) -->
         <table>
             <tr>
                 <td colspan=5 id="top"><input type=text readonly="readonly" value=0 id="term" /></td>
@@ -41,7 +46,10 @@
                 <td><input type=button value="="/></td>
             </tr>
         </table>
+
+        <!-- Import de Jquery et index.js -->
         <script src="https://code.jquery.com/jquery-1.7.1.min.js" integrity="sha256-iBcUE/x23aI6syuqF7EeT/+JFBxjPs5zeFJEXxumwb0=" crossorigin="anonymous"></script>
         <script src="index.js"></script>
+        
     </body>
 </html>
